src/test/deca/context/invalid/homemade/assign_type.deca
// trying to assign value to type

{
    int = 2;
}